Implement lgcp exp, add scripts for sub tb and improved tb

--- a/summerize_results.ipynb
+++ b/summerize_results.ipynb
@@ -10,18 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f7255854",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "150.91159732172682\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "# Log Z for Manywell(d=32)\n",
@@ -30,7 +22,7 @@
     "# logZ = 16 * np.log(Z_x1) + logZ_x2 # 16 = d/2\n",
     "\n",
     "# # Log Z for 25gmm\n",
-    "# logZ = 0\n",
+    "logZ = 0\n",
     "\n",
     "# # Log Z for funnel\n",
     "# logZ = 0\n",
@@ -48,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5e289b24",
    "metadata": {},
    "outputs": [
@@ -56,9 +48,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "delta_log_Z_b: mean = 11.1006, std = 0.0666\n",
-      "delta_log_Z_f: mean = 13.8079, std = 0.1721\n",
-      "2-Wasserstein: mean = 6.1552, std = 0.0250\n"
+      "delta_log_Z_r: mean = 0.9128, std = 0.2356\n",
+      "delta_log_Z_f: mean = 0.0130, std = 0.0074\n",
+      "2-Wasserstein: mean = 4.6026, std = 0.1530\n"
      ]
     }
    ],
@@ -66,7 +58,7 @@
     "import os\n",
     "import numpy as np\n",
     "\n",
-    "result_dir = \"\"  \n",
+    "result_dir = \"energy_sampling/results_pis_architectures/25gmm/exploration_wd_0.2__clipping_lgv_100.0_gfn_10000.0_gfn/fwd/fwd_tb/T_100/tscale_5.0/lvr_4.0\"  \n",
     "\n",
     "delta_log_Z_r_list = []\n",
     "delta_log_Z_f_list = []\n",
@@ -77,7 +69,7 @@
     "    result_txt = os.path.join(result_dir, f\"seed_{seed}\", \"_results.txt\")\n",
     "    with open(result_txt, \"r\") as f:\n",
     "        for line in f:\n",
-    "            if line.startswith(\"final_eval/log_Z_b:\"):\n",
+    "            if line.startswith(\"final_eval/log_Z_r:\"):\n",
     "                delta_log_Z_r_list.append(abs(float(line.strip().split(\":\")[1]) - logZ))\n",
     "            elif line.startswith(\"final_eval/log_Z_f:\"):\n",
     "                delta_log_Z_f_list.append(abs(float(line.strip().split(\":\")[1]) - logZ))\n",
